--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:11.2.0'
     implementation 'com.google.firebase:firebase-auth:11.2.0'
     implementation 'com.google.firebase:firebase-database:11.2.0'
+    implementation("com.mikepenz:materialdrawer:6.0.2@aar") {
+        transitive = true
+    }
+    implementation "com.android.support:recyclerview-v7:26.1.0"
+    implementation "com.android.support:support-annotations:26.1.0"
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -32,11 +38,14 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.29.0'
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
+    implementation 'com.mikepenz:fontawesome-typeface:4.7.0.1@aar'
+    implementation 'com.mikepenz:octicons-typeface:3.0.0.1@aar'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
 repositories {
     mavenCentral()
 }
-
 
 
 apply plugin: 'com.google.gms.google-services'
